--- a/index.html
+++ b/index.html
@@ -130,64 +130,7 @@
 
     <section class="section2">
       <div class="title">المعرض</div>
-      <div class="cont2" id="output">
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a+
-             href="">معلومات اضافيه</a+>
-          </div>
-        </div>
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a href="">معلومات اضافيه</a>
-          </div>
-        </div>
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a href="">معلومات اضافيه</a>
-          </div>
-        </div>
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a href="">معلومات اضافيه</a>
-          </div>
-        </div>
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a href="">معلومات اضافيه</a>
-          </div>
-        </div>
-        <div class="ele">
-          <div class="upper"><img src="images/home0.jpg" alt="" srcset=""></div>
-          <div class="lower">
-            <div class="name">منزل جميل</div>
-            <div class="place">المنيا</div>
-            <div class="prics">150000</div>
-            <a href="">معلومات اضافيه</a>
-          </div>
-        </div>
-        
-      </div>
+      <div class="cont2" id="outputoutput"></div>
     </section>
     <script src="fatchdatahome.js"></script>
   </body>
